crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_quicksort_shadow.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error:   × erro de resolução: [UnknownDirective { name: "heapstack", context: "sig",
  │ item_name: "quicksort" }]
