crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_range_simple.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``..` ou `..=` após step do range`, encontrado
  │ `]`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_range_simple.kata:2:23]
 1 │ action main
 2 │     let nums := [1..15]
   ·                       ─
 3 │     echo!("Range criado")
   ╰────
