crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_range_step.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.mismatch

  × tipo incompatível: esperado `[Int]`, encontrado `[..Int]`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_range_step.kata:7:11]
 6 │ simples :: Int => List::Int
 7 │ lambda x: [1..x]
   ·           ───┬──
   ·              ╰── tipos incompatíveis
 8 │ 
   ╰────
