crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_select.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``)` para fechar destructuring`, encontrado
  │ `rx`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_select.kata:2:13]
 1 │ action main ()
 2 │     let (tx rx) := queue!(2)
   ·             ──
 3 │     
   ╰────
