crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_select2.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``::` após nome do parâmetro`, encontrado `)`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_select2.kata:1:19]
 1 │ action produtor(tx)
   ·                   ─
 2 │     sleep!(100)
   ╰────
