crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_stream_fusion.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `argumento #2 para `map` (aridade padrão 2)`,
  │ encontrado `)`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_stream_fusion.kata:13:42]
 12 │ processar :: Int => Int
 13 │ lambda arr: fold 0 + (filter f (map g arr))
    ·                                          ┬
    ·                                          ╰── token inesperado
 14 │ 
    ╰────
