crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_tensor_boundary.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `pattern`, encontrado `:`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_tensor_boundary.kata:3:8]
 2 │ ler_banco :: Unit => Array::Int
 3 │ lambda : {10 20 30 40}
   ·        ┬
   ·        ╰── token inesperado
 4 │ 
   ╰────
